--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -3,26 +3,38 @@
   flex-flow: column nowrap;
   flex: 1;
   min-height: 0;
-  border-radius: 3px;
-  border: 1px solid black;
-
-  .coloredRow {
-    background-color: var(--secondary);
-  }
 
   .row {
     display: grid;
     align-items: center;
     grid-template-columns: 100%;
     grid-template-rows: repeat(4, 1fr);
+    row-gap: 5px;
+    height: 130px;
+    margin: 1px 6px 10px 2.5px;
     padding: 10px;
     color: var(--contrast);
+    background-color: var(--card);
+    border-radius: 3px;
+    position: relative;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
-    &.tableHeader {
-      background-color: var(--primary);
-      color: #ffffff;
+    .location {
+      display: block;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      font-weight: bold;
+      max-width: calc(100% - 20px);
+      height: 20px;
+      min-height: 20px;
+    }
 
-      grid-template-rows: repeat(3, 1fr);
+    .delete {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      font-size: 12px;
     }
   }
 
