--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -15,7 +15,7 @@
   .container {
     display: flex;
     flex-flow: column nowrap;
-    gap: 5px;
+    gap: 8px;
     width: 100%;
     height: 100%;
     min-height: 0;
